Archive2/ec/d696f0c99b380b/output
main.cpp:13:11: error: 'random_access_iterator' does not name a type
   typedef random_access_iterator<T>        iterator;
           ^
main.cpp:14:11: error: 'random_access_iterator' does not name a type
   typedef random_access_iterator<const T>  const_iterator;
           ^
main.cpp: In function 'int main()':
main.cpp:45:21: error: conflicting declaration 'vector<double> vd2'
   vector<double> vd2(100, 30);      // error: undefined reference to
                     ^
main.cpp:44:23: error: 'vd2' has a previous declaration as 'std::vector<double> vd2'
   std::vector<double> vd2(100, 30); // compiles okay
                       ^
